# dagster-gcp-demo

./: README.md
code_location_a/: Dockerfile  pyproject.toml
code_location_a/definitions/: __init__.py
code_location_b/: cloudbuild.yaml  pyproject.toml
code_location_b/definitions/: __init__.py
webserver_and_daemon/: Dockerfile  dagster.yaml  pyproject.toml  run.sh  workspace.yaml
webserver_and_daemon/scripts/: get_secret.py
